[package]
name = "noise"
description = "Procedural noise generation library."
homepage = "https://github.com/razaekel/noise-rs"
repository = "https://github.com/razaekel/noise-rs"
documentation = "https://docs.rs/noise/"
version = "0.6.0"
license = "Apache-2.0/MIT"
keywords = ["math", "random"]
authors = ["The Noise-rs Developers."]
edition = "2018"

[lib]
name = "noise"

[dependencies]
rand = "0.7"
rand_xorshift = "0.2"
image = { version = "0.23", optional = true }

[features]
default = ["image"]

[dev-dependencies]
criterion = "0.1.2"

[[bench]]
name = "open_simplex"
harness = false

[[bench]]
name = "perlin"
harness = false

[[bench]]
name = "super_simplex"
harness = false

[[bench]]
name = "value"
harness = false

[[bench]]
name = "worley"
harness = false


