[package]
name = "noise"
description = "Procedural noise generation library."
homepage = "https://github.com/razaekel/noise-rs"
repository = "https://github.com/razaekel/noise-rs"
documentation = "https://docs.rs/noise/"
version = "0.6.0"
license = "Apache-2.0/MIT"
keywords = ["math", "random"]
authors = ["The Noise-rs Developers."]
edition = "2018"

[lib]
name = "noise"

[dependencies]
rand = "0.7"
rand_xorshift = "0.2"
image = { version = "0.23", optional = true }
rayon = "1.3"
vek = "0.11"

[features]
default = ["image"]
parallel = []

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug=true

[[bench]]
name = "perlin"
harness = false



